Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1663

C Library does not handle enum's namespace

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.7
    • 1.8.0
    • c
    • None
    • C API: Handle the namespace field in the enum block

    Description

      {
        "type": "record",
        "name": "EventName",
        "namespace": "com.company.avro.schemas",
        "fields": [
          {"name": "eventname_model",
           "type": {
             "type": "enum",
             "namespace": "com.company.models",
             "name": "EventName",
             "symbols": ["XXXX"]
           }
          }
       ]
      }
      

      Such a schema is perfectly valid but the C library does no handle it because it does not parse the namespace field.

      Attachments

        1. AVRO-1663.patch
          2 kB
          Thomas Sanchez
        2. AVRO-1663-2.patch
          19 kB
          Martin Kleppmann
        3. AVRO-1663-3.patch
          20 kB
          Martin Kleppmann
        4. AVRO-1663-4.patch
          21 kB
          Martin Kleppmann

        Issue Links

          Activity

            People

              martinkl Martin Kleppmann
              daedric Thomas Sanchez
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: