AVRO-1663: C API: Parse namespace for enum